# gpu-100days

./: .clang-format  .gitignore  .pre-commit-config.yaml  Claude.md  README.md  pyproject.toml  setup.py
.claude/: settings.json
csrc/: CMakeLists.txt  bindings.cu  dropout.cu  grayScale.cu  matrixAdd.cu  matrixSub.cu  matrixTranspose.cu  rope.cu  silu.cu  softmax.cu  vectorAdd.cu
src/: cuda_ops.pyi
src/gpu_100days/: __init__.py  cuda_kernels.py  flash_attention.py  triton_kernels.py  vector_add.py
tests/: conftest.py  matmul-perf.csv  test_day1.py  test_day10.py  test_day11.py  test_day11_official.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day19.py  test_day2.py  test_day20.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
tests/day14/: results.html  rope-performance.csv
tests/day5/: matmul-perf.csv  results.html
tests/day7/: vector-add-performance.csv
tests/day9/: softmax-performance.csv
